<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".social_media.fragments.EditProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="3dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@drawable/logo"/>
<TextView
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textStyle="bold"/>
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_name"/>
        <ImageView
            android:id="@+id/edit_name_check"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:src="@drawable/check_icon"
            app:tint="@color/green" />
    <EditText
        android:id="@+id/edit_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_bio"/>
        <ImageView
            android:id="@+id/edit_bio_check"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:src="@drawable/check_icon"
            app:tint="@color/green" />
    <EditText
        android:id="@+id/edit_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/add_date_of_birth"/>
        <ImageView
            android:id="@+id/edit_dob_check"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:src="@drawable/check_icon"
            app:tint="@color/green" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/private_information"/>
    <TextView
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_phone_no"/>
        <ImageView
            android:id="@+id/edit_phone_check"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:src="@drawable/check_icon"
            app:tint="@color/green" />
    </LinearLayout>
</ScrollView>